# FraunhoferDiffractionSim

./: .gitignore  CMakeLists.txt  FraunhoferDiffraction.cpp  FraunhoferDiffractionSim.h  LICENSE  README.md  fraunhofer_diffraction.cpp  main.cpp
src/: README.md  fraunhofer_diffraction.cpp  fraunhofer_diffraction.h
